--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node-fetch": "^2.3.0",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
     "start": "run-p start:**",
